getting started on the absolute battle that is going to be refactoring the beast that is the CardBuilder.tsx
